--- a/Cervan_Renz_MirandaSousa_19-660-018.Rmd
+++ b/Cervan_Renz_MirandaSousa_19-660-018.Rmd
@@ -47,6 +47,7 @@ library(caret)
 library(pscl) #zeroinflated
 library(rcompanion)
 library(gam)
+library(doParallel)#SVM Parallelisierung 
 
 ```
 
@@ -1152,6 +1153,8 @@ h #Logarithmierte Preise D und E
 
 ## Support Vector Machine (SVM)
 
+
+
 Notizen Rafi
 SVM Teil:
   Cross validation or other methods for model comparing must be used on one single
@@ -1159,6 +1162,134 @@ methods (e.g. you use Cross Validation to compare 2-3 SVM models).
 • Students are free to choose a measure of fit that they find more appropriate.
 • In case students cannot find an appropriate measure of fit, they can use the Root Mean
 Squared Error (RMSE).
+
+```{r SVM_Rafi_turbo, cache=TRUE}
+
+
+# Parallelisierung einrichten
+cl <- makeCluster(detectCores() - 1) # Verwende alle verfügbaren Kerne außer einem
+registerDoParallel(cl)
+
+# Datenvorbereitung und Stichprobenerstellung
+set.seed(123)
+clean_dat_motor2 <- sample_n(clean_dat_motor, size = 10000)
+
+# Kontrollparameter für wiederholte Kreuzvalidierung
+ctrl <- trainControl(method = "repeatedcv", number = 10, repeats = 3)
+
+# Hyperparameter-Raster für Tuning
+tune_grid <- expand.grid(
+  .C = c(0.1, 1, 10),        # Reduzierte Werte für 'cost'
+  .sigma = c(0.01, 0.1)      # Reduzierte Werte für 'gamma'
+)
+
+# Aufteilen der Daten in Training und Test (z. B. 70% Training, 30% Test)
+set.seed(123)
+sample_index <- sample(seq_len(nrow(clean_dat_motor2)), size = 0.7 * nrow(clean_dat_motor2))
+train_data <- clean_dat_motor2[sample_index, ]
+test_data <- clean_dat_motor2[-sample_index, ]
+
+# SVM-Modelltraining mit Kreuzvalidierung und Hyperparameter-Tuning
+svm_model <- train(CLAIM_PAID ~ SEX + INSR_TYPE + USAGE + TYPE_VEHICLE + MAKE + AGE_VEHICLE + 
+                     SEATS_NUM + CCM_TON_LOG + INSURED_VALUE_log + PREMIUM_log + AMOUNT_CLAIMS_PAID,
+                   data = train_data,
+                   method = "svmRadial",
+                   trControl = ctrl,
+                   tuneGrid = tune_grid)
+
+# Stoppe den Cluster nach der Berechnung
+stopCluster(cl)
+
+# Modellbewertung
+print(svm_model$bestTune)     # Zeigt die besten Hyperparameter
+print(svm_model$finalModel)   # Zeigt das endgültige Modell
+
+# Modellzusammenfassung
+print(svm_model)
+
+# Vorhersage für die Testdaten
+predictions <- predict(svm_model, newdata = test_data)
+
+# Konfusionsmatrix zur Bewertung der Modellleistung
+confusion_matrix <- table(Predicted = predictions, Actual = test_data$CLAIM_PAID)
+print(confusion_matrix)
+
+# Genauigkeit berechnen
+accuracy <- sum(diag(confusion_matrix)) / sum(confusion_matrix)
+print(paste("Accuracy:", round(accuracy, 4)))
+
+# Genauigkeit der Trainingsdaten
+pred_train <- predict(svm_model, train_data)
+print(confusionMatrix(data = pred_train, reference = train_data$CLAIM_PAID))
+
+# Genauigkeit der Testdaten
+pred_test <- predict(svm_model, test_data)
+print(confusionMatrix(data = pred_test, reference = test_data$CLAIM_PAID))
+
+
+```
+
+
+```{r SVM_Rafi, cache=TRUE}
+
+# Define trainControl with repeated cross-validation
+ctrl <- trainControl(method = "repeatedcv", number = 10, repeats = 3)
+
+# Define a grid of hyperparameters for tuning
+tune_grid <- expand.grid(
+  .C = c(0.1, 1, 10),        # Reduzierte Werte für 'cost'
+  .sigma = c(0.01, 0.1)      # Reduzierte Werte für 'gamma'
+)
+
+
+# Split the data into training and testing sets (e.g., 70% training, 30% testing)
+set.seed(123) # For reproducibility
+sample_index <- sample(seq_len(nrow(clean_dat_motor)), size = 0.7 * nrow(clean_dat_motor))
+train_data <- clean_dat_motor[sample_index, ]
+test_data <- clean_dat_motor[-sample_index, ]
+
+# Train the SVM model with cross-validation and hyperparameter tuning
+svm_model <- train(CLAIM_PAID ~ SEX + INSR_TYPE + USAGE + TYPE_VEHICLE + MAKE + AGE_VEHICLE + 
+                     SEATS_NUM + CCM_TON_LOG + INSURED_VALUE_log + PREMIUM_log + AMOUNT_CLAIMS_PAID,
+                   data = train_data,
+                   method = "svmRadial",     # SVM mit radialem Kernel
+                   trControl = ctrl,          # Kontrollparameter für Kreuzvalidierung
+                   tuneGrid = tune_grid)      # Hyperparameter-Raster für Tuning
+
+#Modell Evaluation
+svm_model$bestTune
+
+#Modell anschauen
+svm_model$finalModel
+#Aus den 857 Trainingsdaten wurden 469 Support vectors kreiert (Siehe Train Anzl DS & Output)
+
+
+# Model Summary
+print(svm_model)
+
+# Predict on the test data
+predictions <- predict(svm_model, newdata = test_data)
+
+# Confusion Matrix to evaluate model performance
+confusion_matrix <- table(Predicted = predictions, Actual = test_data$CLAIM_PAID)
+print(confusion_matrix)
+
+# Calculate accuracy
+accuracy <- sum(diag(confusion_matrix)) / sum(confusion_matrix)
+print(paste("Accuracy:", round(accuracy, 4)))
+
+
+
+#Accuracy der Trainigsdaten
+pred_train<- predict(svm_model, train_data)
+confusionMatrix(data= pred_train , reference= train_data$CLAIM_PAID)
+#Accuracy der Testdaten
+pres_test<- predict(svm_model, test_data)
+confusionMatrix(data= pres_test , reference= test_data$CLAIM_PAID)
+
+
+
+```
 
 
 ```{r SVM preparation}
